fixing extra spacing

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: space-between;
     max-width: 1800px;
+    margin: auto;
   }
 
   &__phone,
