--- a/src/styles/_section.scss
+++ b/src/styles/_section.scss
@@ -1,5 +1,5 @@
 .section {
-  padding: 70px 100px;
+  padding: 30px 100px;
   background: $main-color;
   max-width: 2000px;
   display: block;
